# pytorch

aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/nested/cuda/: NestedTensorTransformerUtils.cpp
aten/src/ATen/native/transformers/cuda/: sdp_utils.cpp
aten/src/ATen/test/: CMakeLists.txt
caffe2/: CMakeLists.txt
test/: test_transformers.py
test/inductor/: test_aot_inductor.py
torch/_inductor/: codecache.py
torch/_inductor/codegen/: wrapper.py
torch/_inductor/codegen/aoti_runtime/: interface.cpp
torch/csrc/inductor/aoti_runtime/: cpu_utils.h  cuda_utils.h  device_utils.h  model.h  model_container.h
torch/csrc/utils/: pybind.h
torch/lib/libshm/: CMakeLists.txt
torch/testing/_internal/: common_methods_invocations.py
